--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
     "flowbite-react": "^0.9.0",
     "iconify-icon": "^2.1.0",
     "react": "^18.2.0",
